# myfish

./: .dockerignore  .gitignore  Dockerfile  README.md  hatch_build.py  main.py  pyproject.toml
.github/workflows/: docker-publish.yml  pypi-publish.yml
core/: login.py
src/core/: login.py
src/myfish/: cli.py  main.py
src/myfish/adapters/fish/: __init__.py  api.py  message.py  sign.py  utils.py
src/myfish/adapters/ilink/: __init__.py  api.py  auth.py  crypto.py  message.py
src/myfish/builtin_plugins/: echo.py
src/myfish/core/: adapter.py  bot.py  config.py  engine.py  event.py  loader.py  logger.py  message.py  plugin.py  registry.py  rule.py  storage.py
static/: xianyu_js_version_1.js  xianyu_js_version_2.js
utils/: __init__.py  sign_tool.py
