[project]
name = "myfish"
version = "1.0.0"
description = "一个现代化、纯异步、基于纯Python实现的闲鱼API协议库与Bot开发框架。"
readme = "README.md"
license = "MIT"
authors = [{ name = "Kaguya233qwq", email = "marisa_qwq@qq.com" }]
requires-python = ">=3.10"
keywords = ["xianyu", "bot", "asyncio", "goofish"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: AsyncIO",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]
dependencies = [
    "httpx>=0.28.1",
    "loguru>=0.7.3",
    "msgpack>=1.1.2",
    "pillow>=11.3.0",
    "pydantic>=2.13.3",
    "qrcode>=8.2",
    "websockets>=16.0",
]
[tool.basedpyright]
typeCheckingMode = "standard"

[project.urls]
Homepage = "https://github.com/Kaguya233qwq/myfish"
Repository = "https://github.com/Kaguya233qwq/myfish"

[project.scripts]
myfish = "myfish.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/myfish"]
artifacts = ["src/myfish/adapters/fish/libs/*.dll", "src/myfish/adapters/fish/libs/*.so"]

[tool.hatch.build.targets.sdist]
include = ["/src", "/README.md", "/LICENSE"]
artifacts = ["src/myfish/adapters/fish/libs/*.dll", "src/myfish/adapters/fish/libs/*.so"]

[tool.hatch.build.targets.wheel.hooks.custom]
path = "hatch_build.py"
